@@ -1,16 +1,18 @@
 body {
   font: normal normal 90% sans-serif;
 }
-canvas {
-  z-index: -1;
-  background: rgba(245,245,245,0.8);
-}
 #container {
+  height: 100%;
   position: absolute;
-  width: 100%; height: 100%;
+  width: 100%;
 }
-#comment {
-  width: 150px;
-  height: 150px;
-  padding: 0.5em;
+canvas {
+  background: rgba(127,127,127,0.1);
+  border: 1px solid black;
+  position: absolute;
+  z-index: -1;
+}
+.node {
+  border: 1px solid black;
+  position: absolute;
 }
