@@ -1,18 +1,17 @@
 // vim: ai et sw=4 ts=4
 
-var $j= jQuery.noConflict();
-$j(document).ready( function () {
+//var $j= jQuery.noConflict();
+jQuery(document).ready( function () {
+console.log("Welcome to Perl Node Interface!");
+var pni = new PNI.View();
+//pni.addNode();
+var nodes = [];
+//jQuery.getJSON('/node_list',function(data){ console.log(data); });
 
-var w=100;
-var h=100;
-$j("#container").append("<p>hello</p>");
-    $j("#comment").draggable();
-
-    //var w = new PNI.Window();
-    var foo = new PNI.Emitter(); 
-
-    foo.on("start","bar",function(){console.log("bar")});
-    //window.addEventListener("click",function(){console.log("ok")})
-    foo.emit("bar");
+jQuery.getJSON('/add_node',{type:"Perlfunc::Cos"},
+function(data){
+console.log(data)
+pni.addNode(data);
+});
 
 });
