@@ -8,6 +8,51 @@
 
 var $j= jQuery.noConflict();
 
+
+PNI = {};
+
+PNI.View = function() { //[
+    this.$container = $j('<div></div>')
+        .attr('id','container')
+        .appendTo('body')
+        ;
+    this.$canvas = $j('<canvas></canvas>')
+        .attr('height',this.$container.height())
+        .attr('width',this.$container.width())
+        .appendTo(this.$container)
+        ;
+}
+PNI.View.prototype = {
+    addNode: function(arg) {
+        arg.view = this;
+        var node = new PNI.Node(arg);
+    }
+}; //]
+
+PNI.Node = function(arg) {
+console.log(arg);
+    this.view = arg.view;
+    this.label = arg.label + "("+arg.id+")";
+    this.$div = $j('<div></div>')
+        .attr('class','node')
+        .height(40)
+        .width(100)
+        .draggable()
+        .text(this.label)
+        .appendTo(this.view.$container)
+        .click( function(e) { //[
+        //TODO cosa ci devo mettere al posto di canvas ?
+            var x = e.pageX - $canvas.offset().left 
+            var y = e.pageY - $canvas.offset().top 
+            console.log(x);
+            console.log(y);
+        })
+     ;
+}
+PNI.Node.prototype = {};
+
+/*
+
 PNI = { //[
     extend: function(sub, sup) {
         for (var key in sup.prototype) {
@@ -58,6 +103,7 @@ PNI.CanvasItem.Background.prototype = {
 PNI.extend(PNI.CanvasItem.Background,PNI.CanvasItem);
 //]
 
+*/
 /*
 
 PNI.CanvasItem.Line = function() { PNI.CanvasItem.call(this) } 
